--- a/.env
+++ b/.env
@@ -1,20 +1,21 @@
-# In all environments, the following files are loaded if they exist,
-# the latter taking precedence over the former:
-#
-#  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
-#  * .env.$APP_ENV       committed environment-specific defaults
-#  * .env.$APP_ENV.local uncommitted environment-specific overrides
-#
-# Real environment variables win over .env files.
-#
-# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
-# https://symfony.com/doc/current/configuration/secrets.html
-#
-# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
-# https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
-
-###> symfony/framework-bundle ###
+# Entorno de la aplicación
 APP_ENV=dev
-APP_SECRET=
-###< symfony/framework-bundle ###
+APP_SECRET=tu_clave_secreta_muy_larga_y_aleatoria_aqui_32chars
+
+# URL de la base de datos MySQL (para Docker)
+DATABASE_URL="mysql://root:2ZE868Fru!@database:3306/restaurant_api?serverVersion=8.0&charset=utf8mb4"
+
+# Contraseña de MySQL (úsala también en docker-compose)
+MYSQL_ROOT_PASSWORD=2ZE868Fru!
+
+# CORS - permite peticiones desde cualquier origen en desarrollo
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+
+# Configuración de API Platform
+API_PLATFORM_TITLE="Restaurant API"
+API_PLATFORM_VERSION="1.0.0"
+API_PLATFORM_DESCRIPTION="API RESTful para gestión de restaurantes - Prueba técnica backend"
+
+# Configuración adicional para producción
+# TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
+# TRUSTED_HOSTS='^(localhost|example\.com)$'
