--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -44,73 +44,12 @@ nelmio_api_doc:
         security:
             - ApiKeyAuth: []
             - BearerAuth: []
-        paths:
-            /api/auth/login:
-                post:
-                    tags: [Authentication]
-                    summary: Iniciar sesión
-                    description: Autentica un usuario y devuelve su API Key
-                    security: []
-                    requestBody:
-                        required: true
-                        content:
-                            application/json:
-                                schema:
-                                    type: object
-                                    required: [email]
-                                    properties:
-                                        email:
-                                            type: string
-                                            format: email
-                                            example: "usuario@ejemplo.com"
-                    responses:
-                        '200':
-                            description: Login exitoso
-                        '400':
-                            description: Datos faltantes o incorrectos
-                            content:
-                                application/json:
-                                    schema:
-                                        $ref: '#/components/schemas/Error'
-            /api/auth/register:
-                post:
-                    tags: [Authentication]
-                    summary: Registrar nuevo usuario
-                    description: Crea un nuevo usuario en el sistema
-                    security: []
-                    requestBody:
-                        required: true
-                        content:
-                            application/json:
-                                schema:
-                                    type: object
-                                    required: [email, name]
-                                    properties:
-                                        email:
-                                            type: string
-                                            format: email
-                                            example: "nuevo@ejemplo.com"
-                                        name:
-                                            type: string
-                                            example: "Nombre Usuario"
-                                        roles:
-                                            type: array
-                                            items:
-                                                type: string
-                                            example: ["ROLE_USER"]
-                    responses:
-                        '201':
-                            description: Usuario creado exitosamente
-                        '400':
-                            description: Error de validación
-                            content:
-                                application/json:
-                                    schema:
-                                        $ref: '#/components/schemas/Error'
     areas:
-        path_patterns:
-            - ^/api(?!/doc$)
-        host_patterns: []
+        default:
+            path_patterns:
+                - ^/api(?!/doc$)
+            host_patterns: []
+            with_attribute: true
     models:
         names:
             - { alias: Restaurant, type: App\Entity\Restaurant, groups: [restaurant:read] }
