--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,17 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^4.0",
-        "doctrine/doctrine-bundle": "^2.11",
-        "doctrine/doctrine-migrations-bundle": "^3.3",
-        "doctrine/orm": "^3.0",
+        "api-platform/core": "^4.1.19",
+        "doctrine/doctrine-bundle": "^2.15",
+        "doctrine/doctrine-migrations-bundle": "^3.4.2",
+        "doctrine/orm": "^3.5",
         "nelmio/api-doc-bundle": "^5.4",
-        "nelmio/cors-bundle": "^2.4",
+        "nelmio/cors-bundle": "^2.5",
         "symfony/asset": "7.3.*",
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
         "symfony/expression-language": "7.3.*",
-        "symfony/flex": "^2",
+        "symfony/flex": "^2.8.1",
         "symfony/framework-bundle": "7.3.*",
         "symfony/rate-limiter": "7.3.*",
         "symfony/runtime": "7.3.*",
@@ -30,8 +30,11 @@
         "symfony/yaml": "7.3.*"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.52",
-        "symfony/web-profiler-bundle": "7.3.*"
+        "phpunit/phpunit": ">=12.2.7",
+        "symfony/maker-bundle": "^1.64",
+        "symfony/web-profiler-bundle": "7.3.*",
+        "symfony/browser-kit": "7.3.*",
+        "doctrine/doctrine-fixtures-bundle": "^3.7.1"
     },
     "config": {
         "allow-plugins": {
