--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,12 @@
         "symfony/yaml": "7.3.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.7.1",
+        "friendsofphp/php-cs-fixer": "^3.84",
         "phpunit/phpunit": ">=12.2.7",
-        "symfony/maker-bundle": "^1.64",
-        "symfony/web-profiler-bundle": "7.3.*",
         "symfony/browser-kit": "7.3.*",
-        "doctrine/doctrine-fixtures-bundle": "^3.7.1"
+        "symfony/maker-bundle": "^1.64",
+        "symfony/web-profiler-bundle": "7.3.*"
     },
     "config": {
         "allow-plugins": {
@@ -75,7 +76,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "cs-check": "php-cs-fixer fix --dry-run --diff",
+        "cs-fix": "php-cs-fixer fix"
     },
     "conflict": {
         "symfony/symfony": "*"
