--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,9 +1,7 @@
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
 
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         app_user_provider:
             entity:
@@ -31,7 +29,7 @@ security:
             user_checker: App\Security\UserChecker
             remember_me:
                 secret: '%env(APP_SECRET)%'
-                lifetime: 604800 # 1 week
+                lifetime: 604800
                 secure: true
                 httponly: true
                 samesite: lax
@@ -49,8 +47,6 @@ security:
                 httponly: true
                 samesite: lax
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/api/docs, roles: PUBLIC_ACCESS }
         - { path: ^/api/auth, roles: PUBLIC_ACCESS }
