--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,4 +1,3 @@
-
 server {
     listen 80;
     server_name localhost;
@@ -30,15 +29,13 @@ server {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
-    # API rate limiting
+    # API endpoints
     location /api/ {
-        limit_req zone=api burst=20 nodelay;
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
-    # Auth endpoints with stricter rate limiting
+    # Auth endpoints
     location /api/auth/ {
-        limit_req zone=auth burst=10 nodelay;
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
@@ -98,4 +95,4 @@ server {
     # Logging
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
-} 
+}
