--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -29,20 +29,17 @@ server {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
-    # API endpoints
     location /api/ {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
-    # Auth endpoints
     location /api/auth/ {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
-    # PHP-FPM configuration
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass php:9000;
+        fastcgi_pass 127.0.0.1:9000; # <--- OJO, usa 127.0.0.1 si nginx y php van juntos en el mismo contenedor
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
@@ -62,37 +59,31 @@ server {
         fastcgi_busy_buffers_size 256k;
     }
 
-    # Static files caching
     location ~* \.(css|js|gif|png|jpg|jpeg|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
         try_files $uri =404;
     }
 
-    # Deny access to sensitive files
     location ~ /\.(ht|env) {
         deny all;
         return 404;
     }
 
-    # Deny access to vendor and var directories
     location ~ /(vendor|var)/ {
         deny all;
         return 404;
     }
 
-    # Health check endpoint
     location /health {
         access_log off;
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
 
-    # Error pages
     error_page 404 /index.php;
     error_page 500 502 503 504 /index.php;
 
-    # Logging
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 }
